tests/ui/storage_derive/fail/without-ink-storage.stderr
error: missing ink! storage struct
 --> tests/ui/storage_derive/fail/without-ink-storage.rs:3:1
  |
3 | mod base_psp22 {
  | ^^^
